--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,11 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
     "configurations": [
-        
         {
-            "type": "node-terminal",
-            "name": "Run Script: start",
+            "name": "Docker Node.js Launch",
+            "type": "docker",
             "request": "launch",
-            "command": "npm run start",
-            "cwd": "${workspaceFolder}"
+            "preLaunchTask": "docker-run: debug",
+            "platform": "node"
         }
     ]
 }
