--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "express2": "^5.15.3",
     "framer-motion": "^11.13.1",
+    "from": "^0.1.7",
+    "import": "^0.0.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
