--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:init": "tsx scripts/initialize-db.ts",
+    "rebuild": "bash ./rebuild.sh",
+    "clean": "rm -rf dist node_modules",
+    "full-rebuild": "npm run clean && npm run rebuild"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
